--- a/Holoholona/Holoholona.csproj
+++ b/Holoholona/Holoholona.csproj
@@ -128,9 +128,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Cat.cs" />
     <Compile Include="Models\Dog.cs" />
-    <Compile Include="Models\Mammal.cs" />
-    <Compile Include="Models\IAnimal.cs" />
+    <Compile Include="Models\Abstract\Mammal.cs" />
+    <Compile Include="Models\GetMammalsViewModel.cs" />
+    <Compile Include="Models\Interface\IAnimal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
