--- a/Holoholona/Holoholona.csproj
+++ b/Holoholona/Holoholona.csproj
@@ -130,10 +130,10 @@
     </Compile>
     <Compile Include="Models\Animals\Mammals\Cat.cs" />
     <Compile Include="Models\Animals\Mammals\Dog.cs" />
-    <Compile Include="Models\Abstract\Animal.cs" />
+    <Compile Include="Models\Animal.cs" />
     <Compile Include="Models\Enums\AnimalTypeEnum.cs" />
     <Compile Include="Models\MammalsViewModel.cs" />
-    <Compile Include="Models\Interface\IAnimal.cs" />
+    <Compile Include="Models\IAnimal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AnimalRepository\AnimalRepositoryMock.cs" />
     <Compile Include="Repositories\AnimalRepository\AnimalRepositoryProd.cs" />
