--- a/Holoholona.Entities/Holoholona.Entities.csproj
+++ b/Holoholona.Entities/Holoholona.Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4999BD94-4FC9-4B2B-AA39-A60E8D3FC871}</ProjectGuid>
+    <ProjectGuid>{244ACECB-39DA-4015-83AA-7224B64EFCAF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Holoholona.Services</RootNamespace>
-    <AssemblyName>Holoholona.Services</AssemblyName>
+    <RootNamespace>Holoholona.Entities</RootNamespace>
+    <AssemblyName>Holoholona.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,20 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animals\AnimalMockService.cs" />
-    <Compile Include="Animals\AnimalProdService.cs" />
-    <Compile Include="Animals\IAnimalService.cs" />
-    <Compile Include="ServiceFactory.cs" />
+    <Compile Include="Animal.cs" />
+    <Compile Include="Animals\Mammals\Cat.cs" />
+    <Compile Include="Animals\Mammals\Dog.cs" />
+    <Compile Include="Enums\AnimalTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Holoholona.Entities\Holoholona.Entities.csproj">
-      <Project>{244acecb-39da-4015-83aa-7224b64efcaf}</Project>
-      <Name>Holoholona.Entities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
