--- a/Holoholona/Holoholona.Web.csproj
+++ b/Holoholona/Holoholona.Web.csproj
@@ -129,13 +129,9 @@
     <Compile Include="Models\Animals\Mammals\Cat.cs" />
     <Compile Include="Models\Animals\Mammals\Dog.cs" />
     <Compile Include="Models\Animal.cs" />
-    <Compile Include="Models\Enums\AnimalTypeEnum.cs" />
     <Compile Include="Models\MammalsViewModel.cs" />
     <Compile Include="Models\IAnimal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\AnimalRepository\AnimalRepositoryMock.cs" />
-    <Compile Include="Repositories\AnimalRepository\AnimalRepositoryProd.cs" />
-    <Compile Include="Repositories\AnimalRepository\IAnimalRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -154,6 +150,16 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="scripts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Holoholona.Entities\Holoholona.Entities.csproj">
+      <Project>{244ACECB-39DA-4015-83AA-7224B64EFCAF}</Project>
+      <Name>Holoholona.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Holoholona.Services\Holoholona.Services.csproj">
+      <Project>{4999bd94-4fc9-4b2b-aa39-a60e8d3fc871}</Project>
+      <Name>Holoholona.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
