--- a/Holoholona/Holoholona.Web.csproj
+++ b/Holoholona/Holoholona.Web.csproj
@@ -128,6 +128,8 @@
     </Compile>
     <Compile Include="Models\Animal.cs" />
     <Compile Include="Models\Attack.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
