--- a/Holoholona.Services.Tests/Holoholona.Services.Tests.csproj
+++ b/Holoholona.Services.Tests/Holoholona.Services.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,8 +54,20 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Holoholona.Entities\Holoholona.Entities.csproj">
+      <Project>{244ACECB-39DA-4015-83AA-7224B64EFCAF}</Project>
+      <Name>Holoholona.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Holoholona\Holoholona.Web.csproj">
+      <Project>{1FF1D6E9-4231-4FD8-8E60-6FA583C2D427}</Project>
+      <Name>Holoholona.Web</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
