Added test for Animal fights

--- a/Holoholona.Tests/Holoholona.Web.Tests.csproj
+++ b/Holoholona.Tests/Holoholona.Web.Tests.csproj
@@ -33,7 +33,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -51,6 +53,7 @@
   <ItemGroup>
     <Compile Include="HomeControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AnimalFightTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Holoholona\Holoholona.Web.csproj">
